--- a/oauth2-server/oauth2-api/pom.xml
+++ b/oauth2-server/oauth2-api/pom.xml
@@ -10,6 +10,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>oauth2-api</artifactId>
+    <description>
+        封装 Service 方法暴露成对外提供 RPC 接口 ； 通过 Web 封装成 http 接口 ；进行 网关安全控制、流量控制等
+    </description>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
+
+    <dependencies>
+
+
+    </dependencies>
 
     <build>
         <plugins>
