--- a/oauth2-server/oauth2-interaction/pom.xml
+++ b/oauth2-server/oauth2-interaction/pom.xml
@@ -9,10 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>oauth2-common</artifactId>
+    <artifactId>oauth2-interaction</artifactId>
     <description>
-        封装 通用类 工具类等
+        调用第三方接口处理 包含其它部门 RPC 开放接口，基础平台，其它公司的 HTTP 接口
     </description>
+
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,10 +22,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
 
 
     </dependencies>
@@ -48,5 +45,7 @@
             </snapshots>
         </repository>
     </repositories>
+
+
 
 </project>
