--- a/oauth2-server/oauth2-repository/pom.xml
+++ b/oauth2-server/oauth2-repository/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>oauth2-repository</artifactId>
+    <description>
+        数据访问层，与底层 MySQL 、 Oracle 、 Hbase 等 进行数据交互
+    </description>
 
 
     <properties>
