--- a/oauth2-server/oauth2-web/pom.xml
+++ b/oauth2-server/oauth2-web/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
 
     <name>oauth2-web</name>
-    <description>controller 模块</description>
+    <description>主要是对访问控制进行转发，各类基本参数校验，或者不复用的业务简单处理等</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
