--- a/oauth2-server/pom.xml
+++ b/oauth2-server/pom.xml
@@ -14,6 +14,8 @@
         <module>oauth2-service</module>
         <module>oauth2-repository</module>
         <module>oauth2-manager</module>
+        <module>oauth2-interaction</module>
+        <module>oauth2-manager</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
