--- a/cloud-oauth-server/oauth-server-service/pom.xml
+++ b/cloud-oauth-server/oauth-server-service/pom.xml
@@ -30,6 +30,10 @@
             <artifactId>oauth-server-repository</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.example.oauth</groupId>
+            <artifactId>oauth-server-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
