--- a/cloud-oauth-server/oauth-server-common/pom.xml
+++ b/cloud-oauth-server/oauth-server-common/pom.xml
@@ -34,6 +34,16 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware.reflectasm</groupId>
+            <artifactId>reflectasm</artifactId>
+            <version>1.09</version>
+        </dependency>
     </dependencies>
 
 
