--- a/cloud-oauth-server/oauth-server-common/pom.xml
+++ b/cloud-oauth-server/oauth-server-common/pom.xml
@@ -40,6 +40,11 @@
             <version>3.7</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
+        <dependency>
             <groupId>com.esotericsoftware.reflectasm</groupId>
             <artifactId>reflectasm</artifactId>
             <version>1.09</version>
