--- a/cloud-oauth-server/oauth-server-manager/pom.xml
+++ b/cloud-oauth-server/oauth-server-manager/pom.xml
@@ -30,7 +30,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.example.oauth</groupId>
+            <artifactId>oauth-server-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.example.oauth</groupId>
+            <artifactId>oauth-server-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.example.oauth</groupId>
+            <artifactId>oauth-server-repository</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
