--- a/cloud-oauth-server/oauth-server-launcher/pom.xml
+++ b/cloud-oauth-server/oauth-server-launcher/pom.xml
@@ -30,6 +30,16 @@
             <artifactId>oauth-server-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.9</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
