--- a/cloud-oauth-server/oauth-server-repository/pom.xml
+++ b/cloud-oauth-server/oauth-server-repository/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+            <version>42.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
