--- a/cloud-oauth-server/oauth-server-web/pom.xml
+++ b/cloud-oauth-server/oauth-server-web/pom.xml
@@ -34,6 +34,10 @@
             <artifactId>oauth-server-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.example.oauth</groupId>
+            <artifactId>oauth-security</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
